Fixes wrong item title break on items list block on recent versions of Google Chrome.

--- a/src/assets/css/tainacan-gutenberg-block-items-list.css
+++ b/src/assets/css/tainacan-gutenberg-block-items-list.css
@@ -198,7 +198,8 @@
         line-height: normal; }
         .wp-block-tainacan-items-list ul.items-list.items-layout-grid li.item-list-item a span,
         .wp-block-tainacan-items-list ul.items-list-edit.items-layout-grid li.item-list-item a span {
-          line-height: normal; }
+          line-height: normal;
+          display: block; }
       .wp-block-tainacan-items-list ul.items-list.items-layout-grid li.item-list-item img,
       .wp-block-tainacan-items-list ul.items-list-edit.items-layout-grid li.item-list-item img {
         height: auto;
